# python-rasenmaeher-api

./: .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .snyk  AGENTS.md  Dockerfile  Dockerfile_alpine  Dockerfile_debian  README.rst  docker-compose-dev.yml  docker-compose-local.yml  docker-compose.yml  example_env.sh  pylintrc  pyproject.toml  tox.ini  version.yml
.github/workflows/: build.yml  docs.yml  main.yml  openapijson.yml  pull_request.yml  push_to_main.yml  release.yml
caddy/: Dockerfile
caddy/templates_rasenmaeher/: Caddyfile
docker/: container-init.sh  entrypoint-test.sh  entrypoint.sh  pre_commit_init.sh
docs/: Makefile  api.rst  cfssl.rst  components.rst  conf.py  fakewerk.rst  index.rst  keycloak.rst  kw_product_init.rst  miniwerk.rst  mkcert.rst  modindex.rst  nginx.rst  openldap.rst  pg_init.rst  requirements.txt  search.rst
fakewerk/: Dockerfile  README.rst  docker-entrypoint.sh  fakewerk.py
haproxy/: Dockerfile  crl_watcher.sh  le_entrypoint.sh
haproxy/templates_tak/: haproxy.cfg
nginx/: Dockerfile  crl_watcher.sh  entrypoint_deliver.sh  le_entrypoint.sh
nginx/includes/: dhparam.pem  le_common_settings.conf
nginx/templates/: default.conf.template
nginx/templates_onlymtls/: default.conf.template
nginx/templates_productapi/: default.conf.template
nginx/templates_rasenmaeher/: default.conf.template
nginx/templates_rasenmaeher_uidev/: default.conf.template
pg_init/: 00-create_root_role.sh  01-keycloak.sh  02-raesenmaeher.sh  03_tak.sh
src/rasenmaeher_api/: __init__.py  __main__.py  console.py  jwtinit.py  kchelpers.py  mtlsinit.py  prodcutapihelpers.py  productapihelpers.py  rmsettings.py  settings.py  sqlitedatabase.py  testhelpers.py  user_integrations.py
src/rasenmaeher_api/cert/: __init__.py  backend.py  errors.py
src/rasenmaeher_api/cert/cert_manager/: __init__.py  anoncsr.py  base.py  k8s.py  names.py  private.py  public.py
src/rasenmaeher_api/cert/cfssl/: __init__.py  base.py  mtls.py  private.py  public.py
src/rasenmaeher_api/cfssl/: __init__.py  anoncsr.py  base.py  mtls.py  private.py  public.py
src/rasenmaeher_api/db/: __init__.py  base.py  config.py  dbinit.py  engine.py  enrollments.py  errors.py  logincodes.py  middleware.py  nonces.py  people.py
src/rasenmaeher_api/web/: application.py
src/rasenmaeher_api/web/api/: descriptions.py  middleware.py  router.py
src/rasenmaeher_api/web/api/checkauth/: __init__.py  views.py
src/rasenmaeher_api/web/api/crlproxy/: __init__.py  views.py
src/rasenmaeher_api/web/api/enduserpfx/: __init__.py  views.py
src/rasenmaeher_api/web/api/enrollment/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/enrollment_v2/: __init__.py  views.py
src/rasenmaeher_api/web/api/firstuser/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/healthcheck/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/info/: __init__.py
src/rasenmaeher_api/web/api/instructions/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/internal/: __init__.py  callsign_validity.py
src/rasenmaeher_api/web/api/invitecode/: __init__.py  invitecode_helpers.py  schema.py  views.py
src/rasenmaeher_api/web/api/middleware/: __init__.py  datatypes.py  jwt.py  mtls.py  user.py
src/rasenmaeher_api/web/api/ocsp/: __init__.py  views.py
src/rasenmaeher_api/web/api/people/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/people_v2/: __init__.py  views.py
src/rasenmaeher_api/web/api/product/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/roles/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/takreg/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/tokens/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/users/: __init__.py  schema.py  views.py
src/rasenmaeher_api/web/api/utils/: __init__.py  auditcontext.py  csr_utils.py  schema.py  views.py
src/rasenmaeher_api/web/api_v2/: router.py
src/rasenmaeher_api/web/api_v2/checkauth/: __init__.py
src/rasenmaeher_api/web/api_v2/enduserpfx/: __init__.py  views.py
src/rasenmaeher_api/web/api_v2/enrollment/: __init__.py  views.py
src/rasenmaeher_api/web/api_v2/firstuser/: __init__.py
src/rasenmaeher_api/web/api_v2/healthcheck/: __init__.py  views.py
src/rasenmaeher_api/web/api_v2/instructions/: __init__.py  views.py
src/rasenmaeher_api/web/api_v2/invitecode/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  docker-compose.yml  requirements.txt  test_auth.py  test_caroutes.py  test_cfssl.py  test_console.py  test_crl_fetch.py  test_db.py  test_descriptions.py  test_enrollment.py  test_firstuser.py  test_healthcheck.py  test_healthcheckv2.py  test_interop.py  test_ocsp.py  test_openapi.py  test_productapi.py  test_rasenmaeher_api.py  test_status.py  test_tokens.py
tests/data/: .gitignore
tests/data/jwt/: cl_jwtRS256.key
tests/ptfpapi/: Dockerfile  fpclient.py  fpclient_entrypoint.sh  fpinit.py  fprun.py  muck_magic_hosts.sh  requirements.txt
tests/testcas/: README.md
tests/testjwts/: README.md
tests/testscenarios/: __init__.py  test_cert_bundle.py
tests/tlstests/: conftest.py  test_caroutes.py  test_jwt_init.py  test_productapi.py  test_rminit_session.py
tests/usersapis/: __init__.py  conftest.py  test_fixtures.py  test_fragments.py  test_people.py  test_pools.py  test_userinfos.py
tests/validations/: __init__.py  test_first_time_user.py  test_invite_code.py
tests_ORG/: docker-compose.yml  test_cfssl.py  test_healthcheck.py  test_rasenmaeher_api.py
tests_ORG/data/jwt/: cl_jwtRS256.pub
tests_ORG/ptfpapi/: requirements.txt
tests_ORG/tlstests/: __init__.py  test_rminit_session.py
tests_ORG/usersapis/: test_fixtures.py  test_people.py
tests_v2/: conftest.py  test_auth.py  test_console.py  test_enrollmentv2.py  test_tokens.py
tests_v2/pg_init/: 01-raesenmaeher.sh
tests_v2/ptfpapi/: fpclient.py  fpclient_entrypoint.sh  fpinit.py
tests_v2/tlstests/: test_jwt_init.py
tests_v2/usersapis/: conftest.py  test_pools.py  test_userinfos.py
(+7 files in other folders)
