[project]
name = "rasenmaeher_api"
version = "1.15.1+260427"
description = "python-rasenmaeher-api"
authors = [
    { name = "Aciid", email = "703382+Aciid@users.noreply.github.com" },
    { name = "Eero 'rambo' af Heurlin", email = "eero.afheurlin@iki.fi" },
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11,<4.0"
dependencies = [
    "libadvian>=1.6,<2.0",
    "click>=8.0,<9.0",
    "cryptography>=46.0.5",
    "fastapi>=0.89,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "multikeyjwt>=1.5,<2.0",
    "uvicorn[standard]>=0.20,<0.21",
    "gunicorn>=20.1,<21.0",
    "pyopenssl>=25.3,<26.0",
    "libpvarki>=2.2,<3.0",
    "openapi-readme>=0.2,<0.3",
    "python-multipart>=0.0.21,<1.0.0",
    "aiohttp>=3.11.10,<4.0",
    "aiodns>=3.0,<4.0",
    "brotli>=1.0,<2.0",
    "cchardet>=2.1,<3.0; python_version<='3.10'",
    "filelock>=3.12,<4.0",
    "python-keycloak>=4.2.0,<5.0",
    "sqlmodel>=0.0.37,<1.0",
    "psycopg2-binary>=2.9,<3.0",
]

[project.urls]
homepage = "https://github.com/pvarki/python-rasenmaeher-api"
repository = "https://github.com/pvarki/python-rasenmaeher-api"

[project.scripts]
rasenmaeher_api = "rasenmaeher_api.console:rasenmaeher_api_cli"

[dependency-groups]
dev = [
    "pytest>=7.4,<8.0",
    "coverage>=7.3,<8.0",
    "pytest-cov>=4.1,<5.0",
    "ruff>=0.14,<1.0",
    "bandit>=1.9,<2.0",
    "mypy>=1.18,<2.0",
    "prek>=0.3.9,<0.3.10",
    "pytest-asyncio>=0.23,<1.0",
    "bump-my-version>=1.2,<2.0",
    "detect-secrets>=1.2,<2.0",
    "httpx>=0.23,<1.0",
    "types-requests>=2.31,<3.0",
    "async-asgi-testclient>=1.4,<2.0",
    "pytest-docker>=2.0,<3.0",
    "flaky>=3.8,<4.0",
    "tox>=4.0,<5.0",
    "tox-uv>=1.0,<2.0",
]

[[tool.uv.index]]
name = "nexuslocal"
url = "https://nexus.dev.pvarki.fi/repository/pypilocal/simple"
explicit = true

[tool.uv.sources]
libpvarki = { index = "nexuslocal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rasenmaeher_api"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
strict=true

[[tool.mypy.overrides]]
module="tests"
disallow_untyped_decorators=false

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=rasenmaeher_api --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
omit = ["tests/*"]
branch = true
